<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rocky="http://schemas.android.com/apk/res-auto"
    style="@style/tu_container_common"
    android:orientation="vertical"
    android:weightSum="1" >

    <com.wo2b.sdk.view.pulltorefresh.PullToRefreshScrollView
        android:id="@+id/pullToRefreshScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/common_margin_bottom" >

            <LinearLayout
                android:id="@+id/ll_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/null_image"
                    android:src="@drawable/ic_logo" />

                <ImageView
                    android:id="@+id/version_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/null_image"
                    android:gravity="center"
                    android:src="@drawable/ic_slogan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical" >

                <com.wo2b.wrapper.view.XPreference
                    android:id="@+id/xp_give_mark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    rocky:label="@string/give_mark"
                    rocky:position="top" />

                <com.wo2b.wrapper.view.XPreference
                    android:id="@+id/xp_welcome_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    rocky:label="@string/welcome_page"
                    rocky:position="middle" />

                <com.wo2b.wrapper.view.XPreference
                    android:id="@+id/xp_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    rocky:label="@string/i_want_feedback"
                    rocky:position="middle" />

                <com.wo2b.wrapper.view.XPreference
                    android:id="@+id/xp_share_to_friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    rocky:label="@string/share_to_friends"
                    rocky:position="middle" />

                <com.wo2b.wrapper.view.XPreference
                    android:id="@+id/xp_check_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    rocky:label="@string/check_version"
                    rocky:position="last" />
            </LinearLayout>
        </LinearLayout>
    </com.wo2b.sdk.view.pulltorefresh.PullToRefreshScrollView>

    <LinearLayout
        android:id="@+id/ll_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="top|center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/author_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/null_image"
            android:src="@drawable/author_normal_info" />
    </LinearLayout>

</LinearLayout>